# app-of-the-day

./: .gitignore  README.md
category/games/2026/02/07-00-40-color-match-puzzle/: index.html  pyproject.toml
category/games/2026/02/1738936614-retro-word-scramble-classic/: README.md  main.py
category/games/2026/02/1738972630-vector-memory-pattern-match/: board.py
category/games/2026/02/20250207-022527-lunar-lander-physics-lite/: game.js  jira1.txt
category/games/2026/02/20260208-174000-vector-minesweeper-grid-logic/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260208-174122-vector-sokoban-warehouse-logic/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260208-175545-vector-sudoku-logic-puzzle/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260209-005800-vector-mario-platformer-lite/: appinfo.json
category/games/2026/02/20260209-010050-vector-pacman-maze-escape/: appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-011000-vector-pacman-maze-classic/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-011100-vector-donkey-kong-climb/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-013051-vector-ice-climber-mountain-top/: appinfo.json
category/games/2026/02/20260209-014049-vector-joust-gravity-combat/: appinfo.json  main.py
category/games/2026/02/20260209-014102-vector-balloon-fight-gravity-float/: config.py  entities.py
category/games/2026/02/20260209-014331-vector-balloon-fight-gravity/: README.md  main.py
category/games/2026/02/20260209-015049-vector-tapper-soda-dash/: README.md  appinfo.json  entities.py  main.py  pyproject.toml
category/games/2026/02/20260209-015105-vector-tapper-soda-shop-logic/: README.md  game.js  index.html  pyproject.toml  style.css
category/games/2026/02/20260209-015158-vector-tapper-sushi-conveyor/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-022049-vector-outrun-highway-drive/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-022101-vector-circus-charlie-jump/: README.md  appinfo.json  config.py  game.py  main.py  obstacles.py  player.py  pyproject.toml
category/games/2026/02/20260209-022200-vector-circus-charlie-jump/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-024106-vector-commando-base-assault/: README.md  main.py  pyproject.toml
category/games/2026/02/20260209-024905-vector-popeye-spinach-rescue/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-053051-vector-adventure-island-jump/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-055050-vector-wonder-boy-skate-dash/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-060000-vector-motos-gravity-clash/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-062051-vector-klax-stack-match/: appinfo.json
category/games/2026/02/20260209-063052-vector-rampaging-gorilla-city/: README.md  appinfo.json  constants.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260209-065100-vector-kaboom-bomb-catch/: README.md  appinfo.json  main.py  pyproject.toml
category/games/2026/02/20260209-143522-vector-super-mario-bros-jump-infinite/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260209-151000-vector-mappy-trampoline-bounce/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260209-152030-vector-tapper-root-beer-dash/: README.md  appinfo.json  game.py  main.py  pyproject.toml  renderer.py
category/games/2026/02/20260209-160000-vector-super-mario-world-physics/: README.md  appinfo.json  game.py  main.py  pyproject.toml  renderer.py
category/games/2026/02/20260210-043051-vector-super-mario-bros-jump-platform/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260210-221412-vector-mappy-stolen-item-retrieve/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260210-223343-vector-balloon-fight-fish-hazard/: README.md  appinfo.json  config.py  entities.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-032400-vector-elevator-action-spy-escape/: README.md  appinfo.json  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-050522-vector-space-invaders-simple-swarm/: README.md  appinfo.json  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260211-163544-vector-track-and-field-hurdles/: README.md  appinfo.json  athlete.py  game_state.py  hurdles.py  main.py  pyproject.toml  renderer.py  runtime_analysis.json  static_analysis.json  test_runtime.py
category/games/2026/02/20260211-170000-vector-urban-champion-street-brawl/: README.md  appinfo.json  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260213-120000-rhythm-pulse-beat/: README.md  config.py  entities.py  game.py  main.py  pyproject.toml
category/games/2026/02/20260213-130000-reaction-reflex-test/: README.md  appinfo.json  config.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
category/games/2026/02/20260214-143500-vector-super-mario-bros-infinite-koopa-shell-bounce/: README.md  appinfo.json  config.py  game.py  pyproject.toml  runtime_analysis.json  static_analysis.json  test_runtime.py
category/games/2026/02/20260215-063520-vector-klotski-block-escape/: README.md  appinfo.json  config.py  game.py  main.py  pyproject.toml  runtime_analysis.json  static_analysis.json
(+148 files in other folders)
