[project]
name = "vector-sokoban-warehouse-logic"
version = "1.0.0"
description = "A minimalist puzzle game where you push boxes to designated storage locations in a crowded warehouse"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.0",
]

[project.scripts]
vector-sokoban-warehouse-logic = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
