[project]
name = "vector-sudoku-logic-puzzle"
version = "1.0.0"
description = "A minimalist Sudoku logic puzzle game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
