[project]
name = "vector-pacman-maze-escape"
version = "0.1.0"
description = "Navigate a minimalist maze to collect points while outsmarting tactical AI pursuers."
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
