[project]
name = "vector-pacman-maze-classic"
version = "0.1.0"
description = "Navigate the neon maze, collect all dots, and outsmart the chasing ghosts in this arcade masterpiece."
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.20.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
