[project]
name = "vector-donkey-kong-climb"
version = "0.1.0"
description = "A minimalist platformer inspired by the arcade classic"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.0",
]

[project.scripts]
vector-donkey-kong-climb = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
