[project]
name = "vector-tapper-soda-dash"
version = "0.1.0"
description = "Serve thirsty customers and collect empty mugs in this fast-paced arcade classic"
requires-python = ">=3.11,<3.14"
dependencies = ["pygame>=2.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
