[project]
name = "vector-tapper-sushi-conveyor"
version = "0.1.0"
description = "Serve the right sushi to hungry customers before they reach the end of the conveyor belt."
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
