[project]
name = "vector-popeye-spinach-rescue"
version = "0.1.0"
description = "Rescue Olive Oyl while avoiding Brutus and collecting spinach for a power boost"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.0",
]

[project.scripts]
vector-popeye-spinach-rescue = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
