[project]
name = "vector-mappy-trampoline-bounce"
version = "0.1.0"
description = "Master the art of trampoline physics to recover stolen items while dodging pursuing cats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
