[project]
name = "vector-tapper-root-beer-dash"
version = "0.1.0"
description = "Serve drinks to thirsty customers and collect empty mugs before they crash"
requires-python = ">=3.11,<3.14"
dependencies = ["pygame>=2.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
