[project]
name = "vector-mappy-stolen-item-retrieve"
version = "0.1.0"
description = "Navigate a multi-story house to retrieve stolen items while outsmarting feline guards."
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
