[project]
name = "vector-elevator-action-spy-escape"
version = "0.1.0"
description = "Navigate through a high-security building using elevators and tactical movement to retrieve documents and escape."
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
