[project]
name = "vector-space-invaders-simple-swarm"
version = "0.1.0"
description = "Defend the Earth from rhythmic descending alien swarms in this vector-style arcade shooter."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
