[project]
name = "vector-track-and-field-hurdles"
version = "0.1.0"
description = "A high-speed rhythmic hurdle race challenging your timing and reaction speed."
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
