[project]
name = "vector-urban-champion-street-brawl"
version = "0.1.0"
description = "A simplified 2D street fighting game focused on timing, spacing, and tactical stamina management"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
