[project]
name = "vector-super-mario-bros-infinite-koopa-shell-bounce"
version = "0.1.0"
description = "Master the art of infinite shell bouncing to achieve the highest combo score."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
