[project]
name = "vector-klotski-block-escape"
version = "0.1.0"
description = "Master the classic sliding block puzzle to guide the main red block to freedom."
requires-python = ">=3.12,<3.14"
dependencies = [
    "pygame>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
